src/test/ui/attributes/obsolete-attr.stderr
error: cannot find attribute `fixed_stack_segment` in this scope
  --> $DIR/obsolete-attr.rs:6:3
   |
LL | #[fixed_stack_segment] fn f() {}
   |   ^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `ab_isize` in this scope
  --> $DIR/obsolete-attr.rs:3:3
   |
LL | #[ab_isize="stdcall"] extern {}
   |   ^^^^^^^^

error: aborting due to 2 previous errors

